--- a/css/skin/cool-gray.css
+++ b/css/skin/cool-gray.css
@@ -139,7 +139,7 @@ a, a:hover, a:focus {
 
 /* === CTA Section, Social & Partners === */
 #cta-section, #partners-section, #social-section {
-	background: #f8f8f8 url('../../img/pat-bg.png') repeat;
+	background: #f8f8f8;
 }
 
 
@@ -149,7 +149,7 @@ a, a:hover, a:focus {
 	color: #fff !important;
 }
 .portfolio_single_content div{
-	background: none repeat scroll 0 0 rgba( 54, 57, 64, 0.95);
+	background: none repeat scroll 0 0 rgba(51, 38, 58, 0.95);
 }
 
 
