--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-/*---------------------------------------------------------------------------------
-
-Master Stylesheet
-
-	Template:	 Unika - Responsive One Page HTML5 Template
-	Author:		 imransdesign.com
-	URL:		 http://imransdesign.com/
-    Designed By: https://www.behance.net/poljakova
-	Version:	1.0
-
----------------------------------------------------------------------------------*/
-
 html {
 	height: 100% !important;
 }
@@ -46,12 +34,23 @@ body .body {
 	box-shadow: none !important;
 }
 
+/* Web-development div*/
+.dev-web
+{
+	overflow: hidden;
+    background-color: #f8f8f8;
+    padding: 50px 0
+}
+.box-txt{
+	padding-top: 25px;
+}
+
 /* Begin Fonts */
 body {
 	font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
 	margin-bottom: 10px;
 }
@@ -71,7 +70,7 @@ h5 {
 	font-size: 18px;
 }
 p {
-	font: 14px/1.5em "Roboto";
+	font: 17px/1.5em 'Open Sans', sans-serif;
 }
 .navbar-nav > li > a {
 	font-family: "Lato", Helvetica, Arial, sans-serif;
@@ -92,10 +91,22 @@ section {
 	background: #FFF url(../img/ejecgif.gif) center center no-repeat;
 }
 .devider {
-	width: 100%;
-	height: 23px;
-	background: url('../img/devider.png') no-repeat center center;
-	margin: 5px 0 10px;
+	text-align: center;
+	width: 8%;
+    height: 4px;
+    background: #33263A no-repeat center center;
+    margin: 5px 0 10px;
+    display: inline-block;
+}
+.devidercont {
+	text-align: center;
+	width: 8%;
+    height: 4px;
+    background: #FFF no-repeat center center;
+    margin: 5px 0 10px;
+    display: inline-block;
+   
+
 }
 .thumbnail {
 	padding: 15px;
@@ -123,10 +134,6 @@ section {
 
 #header {
 	/* height: 98px; */
-}
-.tamanho{
-	width: 350px!important;
-    margin: 0 auto;
 }
 
 /* ===== Begin text colors ===== */
@@ -279,10 +286,11 @@ section {
 #text-carousel-intro-section .container {
 	height: 100%;
 }
+/* Edit Ramon: margin-top: 0px */
 #text-carousel-intro-section .caption {
 	position: relative;
-	top: 50%;
-	margin-top: -70px;
+	top: 40%;
+	margin-top: 0px;
 }
 #text-carousel-intro-section .caption h1 {
 	margin-top: 0;
@@ -604,7 +612,7 @@ a.rotate-box-1:hover, a.rotate-box-2:hover {
 	display: block;
 	font-size: 18px;
 	font-weight: bold;
-	margin-top: 40%;
+	margin-top: 25%;
 	padding-bottom: 10px;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -722,7 +730,7 @@ a.rotate-box-1:hover, a.rotate-box-2:hover {
 
 /* ===== Begin partners ===== */
 #partners-section {
-	padding: 80px 0;
+	padding: 50px;
 }
 .partners {
 	background-color: #252320;
@@ -731,6 +739,11 @@ a.rotate-box-1:hover, a.rotate-box-2:hover {
 .partners img {
 	max-width: 100%;
 	padding: 0 15px;
+}
+.partner-center{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 /* ===== End partners ===== */
 
@@ -801,6 +814,9 @@ a.rotate-box-1:hover, a.rotate-box-2:hover {
 .image{
  left:400px!important;
  position: relative;
+}
+.textcenter{
+	text-align: center;
 }
 .text{
 color: black;
@@ -957,9 +973,13 @@ ul.imp-links li a {
 	padding: 0;
 	border: none;
 }
-.page-header h2 {
-	text-transform: uppercase;
+
+.page-header-contato {
+	margin: 0 0 30px 0;
+	padding: 0;
+	border: none;
 }
+
 p.subtitle {
 	letter-spacing: 2px;
 	margin-top: 10px;
